Alpha 5

- Floors now overlap underneath walls, so the transparency at the edge of wall tiles makes sense rather than showing a grey border
- Overhauled how floors overlap onto other tiles, requiring far less sprites to be created (similar to walls)
- Replaced grass floorsa and floor overlap sprites

Alpha 4.2.3 - 24th November 2020

- Fixed a crash when deconstructing a wall that was not constructed
- Fixed an issue with map generation for very small maps

Alpha 4.2.2 - 23rd November 2020

- Extended seed.txt to allow for specifying of the map dimensions.
Note that the resolution of the minimap is set to the actual map dimensions, so maps nearly as large as the game resolution may be unplayable.

Alpha 4.2.1 - 23rd November 2020

- Fix for a crash that could happen when creating furniture decorations

Alpha 4.2 - 22nd November 2020

- Job prioritisation - You can click and drag to set different levels of priority for all jobs in the world, and also on items of furniture that produce jobs
- The crafting management screen also allows you to set a priority on each crafting recipe of disabled, low, normal or high
- The crafting management screen also allows you to select a material to be used for each recipe input item
- Constructions now properly track and respect material selections by the player
- Added an option to the build menu to cancel pending constructions over a selected area
- Added an option to the build menu to deconstruct furniture, doors, bridges and walls over a selected area
- Added tooltips to liquid container inventory descriptions
- Updated assets for constructed walls
- Added a placeholder sprite to be used if any sprites are missing

Alpha 4.1 - 2nd November 2020

- Crafting management - the player can now control how many of each item (or liquid!) is to be produced
- Now correctly cancelling outstanding farming jobs when crop type is changed
- Made music a bit quieter overall

Alpha 4.0.3 - 1st November 2020
