@@ -48,7 +48,7 @@
   "tilesets/gui.atlas" : 1114837455223812194,
   "tilesets/masks.atlas" : 6835019646563164857,
   "tilesets/terrain.atlas" : -1470319453157931919,
-  "translations/collated.csv" : 8702597370388383563,
+  "translations/collated.csv" : -6790013943204363599,
   "translations/languages.json" : -7270478638500492110,
   "ui/cursors/*.png" : -6131032754499221255,
   "ui/fonts/*.ttf" : -7287232856992254877,
