@@ -291,6 +291,7 @@ GUI.OPTIONS.GAMEPLAY.HIDE_TREES_OBSCURING_SETTLERS,This is an option that makes 
 GUI.OPTIONS.MISC.TITLE,,Miscellaneous,,,,,,,,,,,,,
 GUI.OPTIONS.MISC.CRASH_REPORTING_ENABLED,,Allow automatic crash reports,,,,,,,,,,,,,
 GUI.OPTIONS.MISC.HINTS_ENABLED,,Show hints and tutorials in-game,,,,,,,,,,,,,
+GUI.OPTIONS.MISC.MAIN_MENU_BACKGROUND_SCROLLING,,Scroll the background on the main menu,,,,,,,,,,,,,
 GUI.GRAPHICS.RESOLUTION,,Resolution,Résolution,Resolución,Auflösung,Risoluzione,Resolução,Resolução,Разрешение экрана,Rozdzielczość ,,,,,
 GUI.GRAPHICS.FULLSCREEN,,Fullscreen,Plein écran,Pantalla completa,Vollbild,Schermo intero,Tela cheia,Ecrã inteiro,Во весь экран,Pełny ekran ,,,,,
 GUI.MINIMAP.LABEL,,Minimap,,,,,,,,,,,,,
@@ -300,6 +301,8 @@ GUI.OPTIONS.GAMEPLAY.PAUSE_ON_NOTIFICATION,,Pause for notifications,,,,,,,,,,,,,
 GUI.SETTLER_MANAGEMENT.TITLE,,Settlers,,,,,,,,,,,,,
 GUI.SETTLER_MANAGEMENT.LIVING_COUNTER,,Population: {{count}},,,,,,,,,,,,,
 GUI.SETTLER_MANAGEMENT.DEAD_COUNTER,,Dead: {{count}},,,,,,,,,,,,,
+GUI.SETTLER_MANAGEMENT.SORT.BY_NAME,,Sort by name,,,,,,,,,,,,,
+GUI.SETTLER_MANAGEMENT.SORT.BY_UNHAPPINESS,,Sort by unhappiness,,,,,,,,,,,,,
 GUI.RESOURCE_MANAGEMENT.TITLE,,Resources,,,,,,,,,,,,,
 GUI.RESOURCE_MANAGEMENT.UNALLOCATED_LABEL,,Available: {{count}},,,,,,,,,,,,,
 GUI.CRAFTING_MANAGEMENT.TITLE,,Crafting,,,,,,,,,,,,,
