@@ -61,7 +61,8 @@ public class UserPreferences {
 		PAUSE_FOR_NOTIFICATIONS,
 		ACTIVE_MODS,
 		ALLOW_HINTS,
-		DISABLE_TUTORIAL
+		DISABLE_TUTORIAL,
+		MAIN_MENU_BACKGROUND_SCROLLING
 
 	}
 
