@@ -1,5 +1,6 @@
 package technology.rocketjump.undermount.ui.widgets;
 
+import com.badlogic.gdx.graphics.Color;
 import com.badlogic.gdx.graphics.g2d.Batch;
 import com.badlogic.gdx.math.Vector2;
 import com.badlogic.gdx.scenes.scene2d.utils.BaseDrawable;
@@ -14,6 +15,7 @@ public class EntityDrawable extends BaseDrawable {
 
     private final Entity entity;
     private final EntityRenderer entityRenderer;
+    private Color overrideColor = null;
 
     public EntityDrawable(Entity entity, EntityRenderer entityRenderer) {
         this.entity = entity;
@@ -34,10 +36,18 @@ public class EntityDrawable extends BaseDrawable {
         float tempPixelsPerTile = PIXELS_PER_TILE;
         PIXELS_PER_TILE = 1f;
 
-        entityRenderer.render(entity, batch, RenderMode.DIFFUSE, null, null, null);
+        entityRenderer.render(entity, batch, RenderMode.DIFFUSE, null, overrideColor, null);
 
         PIXELS_PER_TILE = tempPixelsPerTile;
 
         entity.setLocationComponent(originalLocationComponent);
+    }
+
+    public Color getOverrideColor() {
+        return overrideColor;
+    }
+
+    public void setOverrideColor(Color overrideColor) {
+        this.overrideColor = overrideColor;
     }
 }
