@@ -2,7 +2,10 @@ Alpha 5
 
 - Floors now overlap underneath walls, so the transparency at the edge of wall tiles makes sense rather than showing a grey border
 - Overhauled how floors overlap onto other tiles, requiring far less sprites to be created (similar to walls)
-- Replaced grass floorsa and floor overlap sprites
+- Replaced grass floors and floor overlap sprites
+- Pressing escape in a management screen will now go back to the main game (you can also right-click in the grey areas)
+- Changed settler management to show non-selected professions as greyed-out, not removed
+- Settler management can now be sorted by name (new default), or unhappiness (old default)
 
 Alpha 4.2.3 - 24th November 2020
 
